# pi-dashboard

./: .gitignore  package.json  rollup.config.js  tsconfig.json
.circleci/: config.yml
.storybook/: main.js  preview.cjs
src/: App.svelte  global.d.ts  routes.ts  types.ts
src-tauri/: Cargo.toml  config.toml  state.toml  tauri.conf.json
src-tauri/src/: auth.rs  calendar.rs  config.rs  errors.rs  main.rs
src-tauri/src/google/: auth.rs  client.rs
src/__tests__/components/: agenda.item.test.ts
src/components/: Agenda.svelte
src/components/agenda/: Item.svelte  agenda.stories.svelte  agenda.svelte  item.test.ts
src/components/calendar/: calendarList.stories.svelte  calendarList.svelte
src/components/weather/: display.svelte  weather.stories.svelte  weather.svelte  weatherCard.svelte  weatherCard.test.ts
src/layout/: card.svelte
src/routes/: CalendarList.svelte  Home.svelte
src/stories/: Tailwindcss.svelte
src/stories/components/: agenda.stories.svelte  weather.stories.svelte
