[package]
authors = ["you"]
build = "src/build.rs"
default-run = "app"
description = "A Tauri App"
edition = "2018"
license = ""
name = "app"
repository = ""
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = {version = "1.0.0-beta.4"}

[dependencies]
easy-error = "1.0.0"
oauth2 = {version = "4.1.0", features = ["ureq"] }
reqwest = {version = "0.11.9", features = ["blocking"] }
retry = "1.3.0"
rocket = "0.5.0-rc.1"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = {version = "1.0.0-beta.8", features = ["api-all"] }
tokio = {version = "1.15.0", features = ["full"] }
ureq = {version = "2.4.0", features = ["json"] }
warp = "0.3.2"

[features]
custom-protocol = ["tauri/custom-protocol"]
default = ["custom-protocol"]
